--- a/languages/ru_lang.json
+++ b/languages/ru_lang.json
@@ -4,11 +4,17 @@
       "start_message": "Стартовое сообщение",
       "main_menu": "{user}, вы попали в главное меню бота. Куда отправимся дальше?",
       "services": "Услуги. Тут будет много текста: {services}",
-      "new_service": "*Добавление новой услуги*\n\nНазвание: *{service_name}*\nОписание: {service_description}\nЦена (от - до): {service_price}",
-      "send_service_name": "Отправьте название услуги"
+      "new_service": "<b>Добавление новой услуги</b>\n\nНазвание: <b>{service_name}</b>\nОписание: <b>{service_description}</b>\nЦена (от - до): <b>{service_price}</b>",
+      "send_service_name": "Отправьте название услуги",
+      "send_service_description": "Отправьте описание услуги",
+      "send_service_price": "Укажите цену или диапазон цен [от - до]",
+      "service_was_created": "Услуга была добавлена в список услуг"
+    },
+    "templates": {
+      "service": "[{service_id}] {service_name} – {service_price}"
     },
     "errors": {
-
+      "price_error": "Диапазон цены указан неверно!"
     }
   },
   "buttons": {
@@ -19,6 +25,13 @@
     "info": "Информация",
     "my_orders": "Мои заказы",
     "add_service": "Добавить услугу",
+    "enter_service_name": "Указать название",
+    "enter_service_description": "Указать описание",
+    "enter_service_price": "Указать цену",
+    "change_service_name": "Изменить название",
+    "change_service_description": "Изменить описание",
+    "change_service_price": "Изменить цену",
+    "cancel": "Отмена",
     "back": "Вернуться назад"
   }
 }
